--- a/stubs/package.json
+++ b/stubs/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "Vuexy",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "npm run development",
@@ -20,22 +22,19 @@
     "@popperjs/core": "^2.11.6",
     "@simonwep/pickr": "~1.8.2",
     "@yaireo/tagify": "~4.16.4",
-    "alpinejs": "^3.9.0",
     "animate.css": "~4.1.1",
     "aos": "~2.3.4",
     "apexcharts-clevision": "^3.28.5",
     "autosize": "~5.0.1",
     "block-ui": "~2.70.1",
     "bloodhound-js": "~1.2.3",
-    "bootstrap": "~5.2.1",
+    "bootstrap": "~5.2.3",
     "bootstrap-datepicker": "~1.9.0",
     "bootstrap-daterangepicker": "~3.1.0",
     "bootstrap-maxlength": "~1.10.1",
-    "bootstrap-select": "github:snapappointments/bootstrap-select#main",
-    "boxicons": "~2.1.4",
+    "bootstrap-select": "snapappointments/bootstrap-select#main",
     "bs-stepper": "~1.7.0",
     "chart.js": "~3.9.1",
-    "chartjs-plugin-style": "~0.5.0",
     "cleave.js": "~1.6.0",
     "clipboard": "~2.0.11",
     "datatables.net": "~1.12.1",
@@ -53,7 +52,6 @@
     "datatables.net-select": "~1.4.0",
     "datatables.net-select-bs5": "~1.4.0",
     "dropzone": "~5.9.3",
-    "feather-icons": "~4.29.0",
     "flag-icons": "^6.6.6",
     "flatpickr": "~4.6.13",
     "hammerjs": "~2.0.8",
@@ -71,6 +69,7 @@
     "leaflet": "~1.9.0",
     "masonry-layout": "~4.2.2",
     "moment": "~2.29.4",
+    "node-waves": "~0.7.6",
     "nouislider": "~15.6.1",
     "numeral": "~2.0.6",
     "pdfmake": "~0.2.5",
@@ -78,7 +77,7 @@
     "plyr": "^3.7.2",
     "quill": "~1.3.7",
     "rateyo": "~2.3.5",
-    "sass": "^1.55.0",
+    "sass": "1.55.0",
     "select2": "~4.0.13",
     "shepherd.js": "~10.0.1",
     "sortablejs": "~1.15.0",
@@ -87,7 +86,8 @@
     "swiper": "~8.4.2",
     "timepicker": "~1.13.18",
     "toastr": "~2.1.4",
-    "typeahead.js": "~0.11.1"
+    "typeahead.js": "~0.11.1",
+    "jkanban": "~1.3.1"
   },
   "devDependencies": {
     "babel-loader": "^8.2.4",
