--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
   "config": {
     "sort-packages": true
   },
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "prefer-stable": true,
   "scripts": {
     "tests": "vendor/bin/phpunit",
