--- a/stubs/package.json
+++ b/stubs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Vuexy",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "private": true,
   "license": "Commercial",
   "scripts": {
@@ -24,22 +24,25 @@
     "browser-sync-webpack-plugin": "2.3.0",
     "cross-env": "7.0.3",
     "glob": "10.3.10",
-        "lodash": "4.17.21",
+    "eslint": "8.56.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "lodash": "4.17.21",
     "postcss": "8.4.33",
     "prettier": "3.2.2",
     "resolve-url-loader": "5.0.0",
     "sass": "1.69.7",
     "sass-loader": "14.0.0",
-    "vite": "5.0.11"
+    "vite": "5.0.12"
   },
   "overrides": {
-"autoprefixer": "10.4.16",
     "webpack": "5.88.1",
     "webpack-cli": "4.9.1",
     "prop-types": "15.8.1"
   },
   "resolutions": {
-"autoprefixer": "10.4.16",
     "webpack": "5.88.1",
     "webpack-cli": "4.9.1",
     "prop-types": "15.8.1"
